Remove GEOCODER job domain (geocoder v1 retired) (#630)
* Remove GEOCODER job domain (geocoder v1 retired)

Geocoder v1 (Pelias) is decommissioned and no producer emits GEOCODER
job events. Drops GEOCODER from JobEvent.JobDomain so it is no longer
advertised by notifications/job_domains, removes the dead getJobActions
branch and the orphaned GeoCoderAction enum, and clears the stale
geocoder email message labels.

getJobActions now uses an exhaustive switch over JobDomain, so adding a
new domain without an action mapping is a compile error. Adds REST
integration tests asserting job_domains excludes GEOCODER, that every
advertised domain resolves to actions (the ninkasi flow), and that a
legacy GEOCODER request is rejected.

The domain column is a plain String, not an enum ordinal, so historical
rows with domain='GEOCODER' remain readable.

* Use a fixed clock instead of Instant.now() in RestApiIntegrationTest

Replaces the seven Instant.now() calls with a single fixed FIXED_TIME
constant so the tests no longer depend on the system clock (SonarQube
java:S6857). Relative offsets via plusSeconds are preserved.